# apps/go_backend/docs/swagger/swagger.yaml
@@ -511,6 +511,8 @@ definitions:
     type: object
   emotions.InferResponse:
     properties:
+      closest_emotion:
+        $ref: '#/definitions/emotions.EmotionDetail'
       inferred_emotion:
         $ref: '#/definitions/emotions.InferredEmotion'
     type: object
@@ -521,8 +523,6 @@ definitions:
         type: number
       closest_emotion_id:
         description: Nearest emotion
-        type: string
-      closest_emotion_name:
         type: string
       dissonance:
         description: '0-1: internal conflict score'
